--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- <script src="operators.js"></script> -->
     <!-- <script src="coercions.js"></script> -->
     <!-- <script src="strings.js"></script> -->
-    <script src="challenge_capitalize.js"></script>
+    <!-- <script src="challenge_capitalize.js"></script> -->
+    <script src="numbers.js"></script>
   </body>
 </html>
