--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- <script src="coercions.js"></script> -->
     <!-- <script src="strings.js"></script> -->
     <!-- <script src="challenge_capitalize.js"></script> -->
-    <script src="numbers.js"></script>
+    <!-- <script src="numbers.js"></script> -->
+    <script src="math_obj.js"></script>
   </body>
 </html>
