--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- <script src="strings.js"></script> -->
     <!-- <script src="challenge_capitalize.js"></script> -->
     <!-- <script src="numbers.js"></script> -->
-    <script src="math_obj.js"></script>
+    <!-- <script src="math_obj.js"></script> -->
+    <script src="challenge_number.js"></script>
   </body>
 </html>
