add datetime object

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- <script src="challenge_capitalize.js"></script> -->
     <!-- <script src="numbers.js"></script> -->
     <!-- <script src="math_obj.js"></script> -->
-    <script src="challenge_number.js"></script>
+    <!-- <script src="challenge_number.js"></script> -->
+    <script src="datetime_obj.js"></script>
   </body>
 </html>
