--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- <script src="math_obj.js"></script> -->
     <!-- <script src="challenge_number.js"></script> -->
     <!-- <script src="datetime_obj.js"></script> -->
-    <script src="arrays_basic.js"></script>
+    <!-- <script src="arrays_basic.js"></script> -->
+    <script src="challenge_arrays.js"></script>
   </body>
 </html>
