add object literals

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- <script src="challenge_number.js"></script> -->
     <!-- <script src="datetime_obj.js"></script> -->
     <!-- <script src="arrays_basic.js"></script> -->
-    <script src="challenge_arrays.js"></script>
+    <!-- <script src="challenge_arrays.js"></script> -->
+    <!-- <script src="object_literal.js"></script> -->
+    <script src="object_literal2.js"></script>
   </body>
 </html>
