--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- <script src="arrays_basic.js"></script> -->
     <!-- <script src="challenge_arrays.js"></script> -->
     <!-- <script src="object_literal.js"></script> -->
-    <script src="object_literal2.js"></script>
+    <!-- <script src="object_literal2.js"></script> -->
+    <script src="json_basic.js"></script>
   </body>
 </html>
