add function basic

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- <script src="challenge_arrays.js"></script> -->
     <!-- <script src="object_literal.js"></script> -->
     <!-- <script src="object_literal2.js"></script> -->
-    <script src="json_basic.js"></script>
+    <!-- <script src="json_basic.js"></script> -->
+    <script src="functions.js"></script>
   </body>
 </html>
