--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!-- <script src="object_literal.js"></script> -->
     <!-- <script src="object_literal2.js"></script> -->
     <!-- <script src="json_basic.js"></script> -->
-    <script src="functions.js"></script>
+    <!-- <script src="functions.js"></script> -->
+    <!-- <script src="global_functions.js"></script> -->
+    <script src="arrow_functions.js"></script>
   </body>
 </html>
