--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <!-- <script src="json_basic.js"></script> -->
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="global_functions.js"></script> -->
-    <script src="arrow_functions.js"></script>
+    <!-- <script src="arrow_functions.js"></script> -->
+    <script src="iife.js"></script>
   </body>
 </html>
