add control flow if

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <!-- <script src="functions.js"></script> -->
     <!-- <script src="global_functions.js"></script> -->
     <!-- <script src="arrow_functions.js"></script> -->
-    <script src="iife.js"></script>
+    <!-- <script src="iife.js"></script> -->
+    <script src="control_flow_if.js"></script>
   </body>
 </html>
