add control flow switch

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- <script src="global_functions.js"></script> -->
     <!-- <script src="arrow_functions.js"></script> -->
     <!-- <script src="iife.js"></script> -->
-    <script src="control_flow_if.js"></script>
+    <!-- <script src="control_flow_if.js"></script> -->
+    <script src="control_flow_switch.js"></script>
   </body>
 </html>
