--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- <script src="arrow_functions.js"></script> -->
     <!-- <script src="iife.js"></script> -->
     <!-- <script src="control_flow_if.js"></script> -->
-    <script src="control_flow_switch.js"></script>
+    <!-- <script src="control_flow_switch.js"></script> -->
+    <script src="truthy_falsy.js"></script>
   </body>
 </html>
