--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- <script src="iife.js"></script> -->
     <!-- <script src="control_flow_if.js"></script> -->
     <!-- <script src="control_flow_switch.js"></script> -->
-    <script src="truthy_falsy.js"></script>
+    <!-- <script src="truthy_falsy.js"></script> -->
+    <script src="logical_operator.js"></script>
   </body>
 </html>
