add loops for, while, do while

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- <script src="control_flow_switch.js"></script> -->
     <!-- <script src="truthy_falsy.js"></script> -->
     <!-- <script src="logical_operator.js"></script> -->
-    <script src="ternary_operator.js"></script>
+    <!-- <script src="ternary_operator.js"></script> -->
+    <script src="loops.js"></script>
   </body>
 </html>
