add fizzbuzz challenge

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- <script src="truthy_falsy.js"></script> -->
     <!-- <script src="logical_operator.js"></script> -->
     <!-- <script src="ternary_operator.js"></script> -->
-    <script src="loops.js"></script>
+    <!-- <script src="loops.js"></script> -->
+    <script src="challenge_fizzbuzz.js"></script>
   </body>
 </html>
