--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- <script src="logical_operator.js"></script> -->
     <!-- <script src="ternary_operator.js"></script> -->
     <!-- <script src="challenge_fizzbuzz.js"></script> -->
-    <script src="loops.js"></script>
+    <!-- <script src="loops.js"></script> -->
+    <script src="array_highorder_methods.js"></script>
   </body>
 </html>
