--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- <script src="ternary_operator.js"></script> -->
     <!-- <script src="challenge_fizzbuzz.js"></script> -->
     <!-- <script src="loops.js"></script> -->
-    <script src="array_highorder_methods.js"></script>
+    <!-- <script src="array_foreach.js"></script> -->
+    <script src="array_filter.js"></script>
   </body>
 </html>
